--- a/AndonLights/AndonLights/appsettings.json
+++ b/AndonLights/AndonLights/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "AndonLights": "server=.\\sqlexpress ; database=AndonLightsDB ; Integrated Security=true; MultipleActiveResultSets=true; TrustServerCertificate=true"
+  }
+
 }
