--- a/AndonLights/AndonLights/appsettings.json
+++ b/AndonLights/AndonLights/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
+    "AndonLightsDocker": "Server=sql_server2022;Database=AndonLightsDB;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=true; TrustServerCertificate=true",
     "AndonLights": "server=.\\sqlexpress ; database=AndonLightsDB ; Integrated Security=true; MultipleActiveResultSets=true; TrustServerCertificate=true"
   }
 
