--- a/AndonLights/AndonLights/Dockerfile.original
+++ b/AndonLights/AndonLights/Dockerfile.original
@@ -1,11 +1,11 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["AndonLights/AndonLights.csproj", "AndonLights/"]
 RUN dotnet restore "AndonLights/AndonLights.csproj"
@@ -14,7 +14,7 @@ WORKDIR "/src/AndonLights"
 RUN dotnet build "AndonLights.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "AndonLights.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "AndonLights.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
