--- a/AndonLights/AndonLights/appsettings.json
+++ b/AndonLights/AndonLights/appsettings.json
@@ -8,8 +8,11 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
+    "AndonLightsPostgres": "Server=127.0.0.1;Port=5432;Database=myDataBase;User Id=postgres;Password=postgres; ",
+
     "AndonLightsDocker": "Server=sql_server2022;Database=AndonLightsDB;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=true; TrustServerCertificate=true",
     "AndonLights": "server=.\\sqlexpress ; database=AndonLightsDB ; Integrated Security=true; MultipleActiveResultSets=true; TrustServerCertificate=true"
+
   }
 
 }
